Enlarge top padding to avoid overlap on a small browser window

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -3,6 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-  padding-top: 70px;
+  padding-top: 90px;
   margin-bottom: 40px;
 }
